--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-navigation/material-bottom-tabs": "^6.2.1",
+    "@react-navigation/bottom-tabs": "5.x",
     "@react-navigation/native": "^6.0.10",
     "expo": "~45.0.0",
     "expo-barcode-scanner": "~11.3.0",
