--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@react-navigation/native-stack": "^6.6.2",
     "expo": "~45.0.0",
     "expo-barcode-scanner": "~11.3.0",
+    "expo-dev-client": "~1.0.0",
     "expo-status-bar": "~1.3.0",
     "firebase": "^9.8.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-barcode-creator": "^0.1.4",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-custom-qr-codes-expo": "^2.2.0",
+    "react-native-date-picker": "^4.2.2",
     "react-native-ico-material-design": "^1.5.3",
     "react-native-paper": "^4.12.1",
     "react-native-qrcode": "^0.2.7",
