--- a/CowID/package.json
+++ b/CowID/package.json
@@ -16,6 +16,7 @@
     "expo": "~45.0.0",
     "expo-barcode-scanner": "~11.3.0",
     "expo-dev-client": "^1.0.0",
+    "expo-image-picker": "^13.1.1",
     "expo-status-bar": "~1.3.0",
     "firebase": "^9.8.3",
     "react": "17.0.2",
