--- a/CowID/package.json
+++ b/CowID/package.json
@@ -18,6 +18,7 @@
     "expo-dev-client": "^1.0.0",
     "expo-image-picker": "^13.1.1",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.3",
     "firebase": "^9.8.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
