--- a/CowID/package.json
+++ b/CowID/package.json
@@ -24,6 +24,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-awesome-alerts": "^2.0.0",
     "react-native-barcode-creator": "^0.1.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-custom-qr-codes-expo": "^2.2.0",
@@ -34,6 +35,7 @@
     "react-native-qrcode": "^0.2.7",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-safe-area-context": "4.2.4",
+    "react-native-scl-alert": "^1.2.1",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.1.0",
