--- a/CowID/package.json
+++ b/CowID/package.json
@@ -10,18 +10,23 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/cameraroll": "^4.1.2",
     "@react-native-community/datetimepicker": "^6.2.0",
     "@react-navigation/bottom-tabs": "5.x",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "expo": "~45.0.0",
     "expo-barcode-scanner": "~11.3.0",
+    "expo-cameraroll": "^1.1.0",
     "expo-dev-client": "^1.0.0",
     "expo-image-picker": "^13.1.1",
+    "expo-media-library": "~14.1.0",
+    "expo-permissions": "^13.2.0",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.3",
     "firebase": "^9.8.3",
     "react": "17.0.2",
+    "react-component-export-image": "^1.0.6",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-awesome-alerts": "^2.0.0",
@@ -39,6 +44,7 @@
     "react-native-screens": "~3.11.1",
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.1.0",
+    "react-native-view-shot": "^3.3.0",
     "react-native-web": "0.17.7",
     "react-qr-code": "^2.0.7"
   },
