--- a/CowID/package.json
+++ b/CowID/package.json
@@ -24,7 +24,8 @@
     "expo-permissions": "^13.2.0",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.3",
-    "firebase": "^9.8.3",
+    "firebase": "^9.9.3",
+    "install": "^0.13.0",
     "react": "17.0.2",
     "react-component-export-image": "^1.0.6",
     "react-dom": "17.0.2",
