--- a/MiGranja/package.json
+++ b/MiGranja/package.json
@@ -10,8 +10,24 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@firebase/auth": "^0.20.5",
+    "@react-native-firebase/app": "^15.3.0",
+    "@react-navigation/bottom-tabs": "^6.3.2",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
+    "expo-barcode-scanner": "^11.4.0",
+    "expo-image-picker": "^13.3.1",
+    "expo-media-library": "^14.2.0",
+    "firebase": "^9.9.3",
     "react": "18.0.0",
-    "react-native": "0.69.4"
+    "react-native": "0.69.4",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-date-picker": "^4.2.5",
+    "react-native-modal-datetime-picker": "^13.1.2",
+    "react-native-paper": "^4.12.4",
+    "react-native-qrcode-svg": "^6.1.2",
+    "react-native-vector-icons": "^9.2.0",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
