--- a/MiGranja/package.json
+++ b/MiGranja/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "expo": "^46.0.0",
+    "expo-av": "~12.0.4",
     "expo-barcode-scanner": "^11.4.0",
     "expo-image-picker": "^13.3.1",
     "expo-media-library": "^14.2.0",
@@ -26,6 +28,7 @@
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-paper": "^4.12.4",
     "react-native-qrcode-svg": "^6.1.2",
+    "react-native-safe-area-context": "^4.3.3",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4"
   },
