--- a/MiGranja/android/settings.gradle
+++ b/MiGranja/android/settings.gradle
@@ -8,4 +8,8 @@ if (settings.hasProperty("newArchEnabled") && settings.newArchEnabled == "true")
     project(":ReactAndroid").projectDir = file('../node_modules/react-native/ReactAndroid')
     include(":ReactAndroid:hermes-engine")
     project(":ReactAndroid:hermes-engine").projectDir = file('../node_modules/react-native/ReactAndroid/hermes-engine')
+    
+    //Manual Linking to Scan-Barcode
+    // include ':react-native-scan-barcode', ':app'
+    // project(':react-native-scan-barcode').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-scan-barcode/android')    
 }
