--- a/backendCowID/package.json
+++ b/backendCowID/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src -d dist",
     "dev": "nodemon src --exec babel-node",
-    "start": "node dist"
+    "start": "npm run build && node dist"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "firebase": "^9.17.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "swagger-jsdoc": "^6.2.1",
@@ -25,7 +26,7 @@
     "@babel/cli": "^7.17.10",
     "@babel/core": "^7.18.5",
     "@babel/node": "^7.18.5",
-    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-env": "^7.20.2",
     "nodemon": "^2.0.18"
   }
 }
