Cambios en AddCow a la hora de mostrar el código y cambios en requisición de permisos de guardado

--- a/CowID/app.json
+++ b/CowID/app.json
@@ -31,13 +31,23 @@
       "supportsTablet": true
     },
     "android": {
+      "permissions": [
+        "WRITE_EXTERNAL_STORAGE"
+      ],
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.alanpc.CowID"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "71ed8345-23c3-46c2-911b-0fe549982f5e"
+      }
+    },
+    "owner": "alanpc"
   }
 }
